GS-9628 Reskin: Home page redesign follow-up. 6) "t" no longer cut off in FF on Windoze. 7) Serial comma added to default value text.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -1193,7 +1193,7 @@ body.ie6 .clearfix {
 }
 
 #find input{
-    width: 158.5px;
+    width: 170px;
 }
 
 #find button{
@@ -1214,7 +1214,7 @@ body.ie6 .clearfix {
 }
 
 #splashStateSelector{
-    margin:2px 4px;
+    margin:0 4px;
 }
 
 #compare {
